--- a/gapvis/joth.html
+++ b/gapvis/joth.html
@@ -5,6 +5,7 @@
     <title>GapVis: Visual Interface for Reading Ancient Texts</title>
     <meta name="description" content="GapVis is a visual interface for reading ancient texts for the Google Ancient Places project.">
     <meta name="author" content="Nick Rabinowitz / Google Ancient Places Project">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
@@ -88,7 +89,7 @@
             <a href="http://www.perseids.org/sites/joth">Journey of the Hero</a>
         </div>
     </div>
-    <div class="row">
+    <div>
         <div id="app-view" role="main" class="clearfix"></div>
     </div>
         <footer>
